Encoder PATCH | TEST Socket | DevToolsFile | BUGs